ci(dependabot): add missing angular-devkit packages to angular group

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -28,6 +28,7 @@ updates:
         applies-to: 'version-updates'
         patterns:
           - '@angular/*'
+          - '@angular-devkit/*'
           - 'ng-packagr'
           - 'zone.js'
         exclude-patterns:
